# shakmaty

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  chessboard.py
.github/: dependabot.yml
.github/workflows/: bench.yml  check.yml  ci.yml  clippy.yml  doc-check.yml  format.yml  manifest-sort.yml  test.yml
benches/: benches.rs
fuzz/: Cargo.toml
fuzz/corpus/fen/: chessops-roundtrip-fail
fuzz/corpus/fen_from_ascii/: too-many-empty-ranks
fuzz/corpus/pgn/: bare
fuzz/corpus/uci/: promotion
fuzz/corpus/uci_from_ascii/: move
fuzz/fuzz_targets/: bincode_roundtrip.rs  fen.rs  fen_from_ascii.rs  fen_from_setup.rs  incremental_zobrist.rs  legals_are_legal.rs  packed_setup.rs  packed_setup_from_setup.rs  pgn.rs  san.rs  san_from_ascii.rs  square.rs  syzygy_pawnful.rs  uci.rs  uci_from_ascii.rs
fuzzed/: Cargo.toml  Makefile
fuzzed/corpora/fen/: horde
fuzzed/corpora/san/: drop  longest  move
fuzzed/corpora/uci/: drop
fuzzed/src/: main.rs
fuzzing/: .gitignore  Cargo.toml  Makefile
fuzzing/corpora/san/: capture  castle-long  promotion
pgn-reader/: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
pgn-reader/.github/: dependabot.yml
pgn-reader/.github/workflows/: test.yml
pgn-reader/benches/: benches.rs  fixture.pgn  lichess_db_1000k.pgn  lichess_db_100k.pgn  lichess_db_10k.pgn  twic1599_1000k.pgn  twic1599_100k.pgn  twic1599_10k.pgn
pgn-reader/docs/: Makefile  README.md  visitor.d2  visitor.dot
pgn-reader/examples/: extract_fen.rs  lichess4545.rs  lichess4545.rs.bak  parallel_validate.rs  parallel_validate.rs.bak  pgnstats.rs  reader.rs  stats.rs  validate.rs  write.rs
pgn-reader/fuzz/: Cargo.toml
pgn-reader/fuzz/fuzzers/: pgn.rs
pgn-reader/src/: buffer.rs  comment.rs  lib.rs  main.rs  nag.rs  reader.rs  tag.rs  types.rs  visitor.rs  writer.rs
pgn-reader/src/writer/: config.rs  error.rs  mod.rs
pgn-reader/tests/: writer.rs
shakmaty/: CHANGELOG.md  Cargo.toml  README.md
shakmaty-syzygy/: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  download-test-assets.sh  download-test-tables.ps1  download-test-tables.sh  update-test-tables.py
shakmaty-syzygy/.github/: dependabot.yml
shakmaty-syzygy/.github/workflows/: test.yml
shakmaty-syzygy/benches/: benches.rs
shakmaty-syzygy/examples/: fathom.rs
shakmaty-syzygy/fuzz/: Cargo.toml
shakmaty-syzygy/fuzz/fuzz_targets/: open.rs  pawnful.rs
shakmaty-syzygy/src/: blocking.rs  chunk_by.rs  errors.rs  filesystem.rs  lazy.rs  lib.rs  material.rs  table.rs  tablebase.rs  tablebases.rs  types.rs
shakmaty-syzygy/src/aio/: filesystem.rs  mod.rs  table.rs  tablebase.rs
shakmaty-syzygy/tables/atomic/: TEST-SOURCE.txt
shakmaty-syzygy/tables/chess/: TEST-SOURCE.txt
shakmaty-syzygy/tables/giveaway/: TEST-SOURCE.txt
shakmaty-syzygy/tables/regular/: TEST-SOURCE.txt
shakmaty-syzygy/tests/: antichess.csv  atomic.csv  giveaway.csv  regular.csv  suite.rs
shakmaty/benches/: benches.rs
shakmaty/src/: attacks.rs  bitboard.rs  board.rs  castling_side.rs  color.rs  fen.rs  lib.rs  m.rs  packed.rs  position.rs  role.rs  san.rs  setup.rs  square.rs  types.rs  uci.rs  util.rs  variant.rs  zobrist.rs
shakmaty/tests/: horde_insufficient_material.rs  perft.rs  tricky.perft  zobrist.rs
src/: attacks.rs  bitboard.rs  board.rs  bootstrap.rs  build.rs  castling_side.rs  color.rs  errors.rs  fen.rs  lib.rs  m.rs  magics.rs  main.rs  material.rs  movelist.rs  nnue_compress.rs  packed.rs  perft.rs  position.rs  role.rs  san.rs  setup.rs  situation.rs  square.rs  types.rs  uci.rs  util.rs  variant.rs  variants.rs  zobrist.rs
tests/: horde_insufficient_material.csv  horde_insufficient_material.rs  horde_white_insufficient_material.rs  kingofthehill.perft  perft.rs  tricky.perft  zobrist.csv  zobrist.rs
