[package]
name = "shakmaty"
version = "0.27.3" # remember to update changelog and html_root_url
description = "Chess and chess variant rules and operations"
repository = "https://github.com/niklasf/shakmaty"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games", "parser-implementations"]
keywords = ["chess", "lichess"]
edition = "2021"
rust-version = "1.85.1" # remember to update test.yml

[features]
default = ["std"]
alloc = ["serde?/alloc"]
std = ["alloc", "btoi/std", "nohash-hasher?/std"]
variant = []
nohash-hasher = ["dep:nohash-hasher"]
serde = ["dep:serde"]

[[bench]]
name = "benches"
harness = false
required-features = ["alloc"]

[lib]
bench = false

[dependencies]
arrayvec = { version = "0.7", default-features = false }
bitflags = "2.0.0"
btoi = { version = "0.4", default-features = false }
nohash-hasher = { version = "0.2", default-features = false, optional = true }
serde = { version = "1.0.197", default-features = false, optional = true }

[dev-dependencies]
csv = "1.3"
iai = { version = "0.1", git = "https://github.com/sigaloid/iai", rev = "d56a5971f6d5556cd9e9b92e7e0f753c9ce9cdc7" }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(docs_rs)"] }
