[workspace]
resolver = "3"
members = [
    "shakmaty",
    "shakmaty-syzygy",
    "pgn-reader",

    # Internal
    "fuzz",
]

[workspace.package]
repository = "https://github.com/niklasf/shakmaty"
license = "GPL-3.0-or-later"
edition = "2024"
rust-version = "1.85.1" # remember to update ci.yml

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docs_rs)', 'cfg(fuzzing)'] }
