[package]
name = "pgn-reader"
version = "0.28.0" # remember to update benchmarks
description = "Fast non-allocating and streaming reader for chess games in PGN notation"
readme = "README.md"
categories = ["games", "parser-implementations"]
keywords = ["chess", "pgn"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
bench = false

[[bench]]
name = "benches"
harness = false

[dependencies]
memchr = "2.2"
btoi = "0.5"
shakmaty = { version = "0.29", path = "../shakmaty" }

[dev-dependencies]
crossbeam = "0.8.4"
zstd = "0.13.3"
criterion = "0.6.0"

[lints]
workspace = true
