[package]
name = "shakmaty-syzygy"
version = "0.20.0" # remember to update changelog and html_root_url
description = "Probe Syzygy tablebases"
repository = "https://github.com/niklasf/shakmaty-syzygy"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games"]
keywords = ["chess", "syzygy", "tablebase"]
exclude = ["tables/**/*.*tb*"]
edition = "2021"

[[bench]]
name = "benches"
harness = false

[dependencies]
arrayvec = "0.7"
bitflags = "2.0.0-rc.1"
shakmaty = "0.22.0"
byteorder = "1"
itertools = "0.10"
positioned-io = "0.3"
rustc-hash = "1"
once_cell = "1"

[dev-dependencies]
csv = "1"
bencher = "0.1"
clap = { version = "4", features = ["derive", "deprecated"] }

[features]
default = []
variant = ["shakmaty/variant"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]
