[package]
name = "shakmaty-syzygy"
version = "0.28.0" # remember to update changelog
description = "Probe Syzygy endgame tablebases"
readme = "README.md"
categories = ["games"]
keywords = ["chess", "syzygy", "tablebase"]
exclude = ["tables/**/*.*tb*"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
bench = false

[[bench]]
name = "benches"
harness = false

[dependencies]
arrayvec = "0.7"
bitflags = "2"
shakmaty = { version = "0.30", path = "../shakmaty" }
byteorder = "1.2"
rustc-hash = "2"
once_cell = "1.12"
tracing = "0.1.6"
memmap2 = { version = "0.9", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.143" # for optional posix_fadvise

[dev-dependencies]
csv = "1.3.1"
clap = { version = "4.5.40", features = ["derive", "deprecated"] }
criterion = "0.8.1"

[features]
default = []
mmap = ["memmap2"]
variant = ["shakmaty/variant"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[lints]
workspace = true
