[package]
name = "shakmaty"
version = "0.29.4" # remember to update changelog
description = "Chess and chess variant rules and operations"
readme = "README.md"
categories = ["games", "parser-implementations"]
keywords = ["chess", "lichess"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
# environment
default = ["std"]
alloc = ["serde?/alloc"]
std = ["alloc", "btoi/std", "nohash-hasher?/std"]
# features
variant = []
# third-party integrations
arbitrary = ["dep:arbitrary", "std"]
bincode = ["dep:bincode"]
nohash-hasher = ["dep:nohash-hasher"]
proptest = ["dep:proptest", "dep:proptest-derive", "std"]
serde = ["dep:serde"]

[[bench]]
name = "benches"
harness = false
required-features = ["alloc"]

[lib]
bench = false

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"], optional = true } # version linked in lib.rs
arrayvec = { version = "0.7", default-features = false }
bincode = { version = "2.0.1", features = ["derive"], default-features = false, optional = true } # version linked in lib.rs
bitflags = "2.9.0"
btoi = { version = "0.5", default-features = false }
nohash-hasher = { version = "0.2", default-features = false, optional = true } # version linked in lib.rs
proptest = { version = "1.9.0", features = ["std"], default-features = false, optional = true } # version linked in lib.rs
proptest-derive = { version = "0.7.0", optional = true }
serde = { version = "1.0.197", default-features = false, optional = true } # version linked in lib.rs

[dev-dependencies]
csv = "1.3.1"
iai-callgrind = "0.16.1" # update iai-callgrind-runner in ci.yml
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.14.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[lints]
workspace = true
