[package]
name = "pgn-reader-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pgn-reader = { path = ".." }

[workspace]
members = ["."] # Let fuzzing suite not interfere with workspaces

[[bin]]
name = "pgn"
path = "fuzzers/pgn.rs"
