[package]
name = "shakmaty-syzygy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
shakmaty = "0.19"
shakmaty-syzygy = { path = ".." }
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }

[[bin]]
name = "pawnful"
path = "fuzz_targets/pawnful.rs"
