[package]
name = "shakmaty-syzygy-fuzz"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
shakmaty = "0.27"
shakmaty-syzygy = { path = ".." }
libfuzzer-sys = "0.4"

[workspace]
members = ["."] # Let fuzz suite not interfere with workspaces

[[bin]]
name = "pawnful"
path = "fuzz_targets/pawnful.rs"
